force-app/main/default/objects/WebshopFilter__mdt/WebshopFilter__mdt.object-meta.xml
<CustomObject>
    <description>CRM-1123</description>
    <label>Webshop Filter</label>
    <pluralLabel>Webshop Filters</pluralLabel>
</CustomObject>