force-app/main/default/objects/WebshopFilter__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Whether the filter is active.</description>
    <label>Active?</label>
    <type>Checkbox</type>
</CustomField>