force-app/main/default/objects/WebshopFilter__mdt/fields/FilteredField__c.field-meta.xml
<CustomField>
    <fullName>FilteredField__c</fullName>
    <description>Field to filter.</description>
    <label>Filtered Field</label>
    <metadataRelationshipControllingField>WebshopFilter__mdt.FilteredObject__c</metadataRelationshipControllingField>
    <referenceTo>FieldDefinition</referenceTo>
    <relationshipLabel>WebshopFilters</relationshipLabel>
    <relationshipName>WebshopFilters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>