force-app/main/default/objects/WebshopFilter__mdt/fields/FilteredObject__c.field-meta.xml
<CustomField>
    <fullName>FilteredObject__c</fullName>
    <description>By default Product2</description>
    <label>Filtered Object</label>
    <referenceTo>EntityDefinition</referenceTo>
    <relationshipLabel>WebshopFilters</relationshipLabel>
    <relationshipName>WebshopFilters</relationshipName>
    <type>MetadataRelationship</type>
</CustomField>