force-app/main/default/objects/WebshopFilter__mdt/listViews/All_Fields.listView-meta.xml
<ListView>
    <fullName>All_Fields</fullName>
    <columns>MasterLabel</columns>
    <columns>Active__c</columns>
    <columns>FilteredField__c</columns>
    <columns>FilteredObject__c</columns>
    <columns>Order__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Fields</label>
    <language>en_US</language>
</ListView>